
cmake_minimum_required(VERSION 3.16)

project(mixr)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(src/base)
add_subdirectory(src/dafif)
add_subdirectory(src/graphics)
add_subdirectory(src/ighost)
add_subdirectory(src/instruments)
add_subdirectory(src/interop)
add_subdirectory(src/linearsystem)
add_subdirectory(src/linkage)
add_subdirectory(src/map)
add_subdirectory(src/models)
add_subdirectory(src/recorder)
add_subdirectory(src/simulation)
add_subdirectory(src/terrain)
add_subdirectory(src/ui)